<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/redemaissocial"
        android:layout_width="310dp"
        android:layout_height="29dp"
        android:text="@string/redemaissocial"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/bemvindo"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pessoas_tela_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/frase_inicial"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/frase_inicial"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bemvindo"
        app:layout_constraintVertical_bias="0.133" />

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@mipmap/logo_app_round" />

    <ImageView
        android:id="@+id/pessoas_tela_inicial"
        android:layout_width="301dp"
        android:layout_height="226dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:srcCompat="@drawable/pessoas_tela_inicial" />

    <ImageView
        android:id="@+id/sol"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:layout_marginTop="92dp"
        app:layout_constraintBottom_toTopOf="@+id/pessoas_tela_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sol" />

    <Button
        android:id="@+id/botao_login"
        style="@style/Botao_Login"
        android:onClick="activity_login"
        android:text="@string/login"
        android:fontFamily="@font/poppins"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_inicial"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/botao_cadastro"
        style="@style/Botao_Cadastro"
        android:text="@string/cadastre_se"
        android:fontFamily="@font/poppins"
        android:textColor="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_login"
        app:layout_constraintVertical_bias="0.138"
        />


</androidx.constraintlayout.widget.ConstraintLayout>